syntax = "proto3";

package gowatcher;

option go_package = "internal/gowatcher";

message Metric {
  string id = 1;
  string mtype = 2;
  sint64 delta = 3;
  double value = 4;
  string hash = 5;
}

message AddMetricRequest {
  Metric metric = 1;
}

message AddMetricResponse {
  string error = 1;
}

message GetMetricRequest {
  Metric metric = 1;
}

message GetMetricResponse {
  Metric metric = 1;
  string error = 2;
}

service Metrics {
  rpc AddMetric(AddMetricRequest) returns (AddMetricResponse);
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
}